fix(tree): restore wrapping in tree-item text content (#6518)
**Related Issue:** #6512 

## Summary

Updates styles to restore text wrapping. Thanks @nwhittaker for the fix
suggestion!

--- a/src/components/tree-item/tree-item.scss
+++ b/src/components/tree-item/tree-item.scss
@@ -152,7 +152,7 @@
 }
 
 .node-container {
-  @apply relative flex items-center;
+  @apply relative flex items-center min-w-0;
 
   .checkmark,
   .bullet-point {
